--- a/family-tree.html
+++ b/family-tree.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Family Tree - Blessed Raven</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Cinzel+Decorative:wght@700&display=swap" rel="stylesheet">
+    <title>Sacred Family Tree - Blessed Raven</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Cinzel+Decorative:wght@700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            scroll-behavior: smooth;
         }
         body {
-            font-family: 'Orbitron', sans-serif;
-            background: linear-gradient(135deg, #000000, #1a0000, #330000);
-            color: #ff0000;
+            font-family: 'Montserrat', sans-serif;
+            background: linear-gradient(135deg, #0a0015, #1a0000, #2b0010);
+            color: #ff3333;
             text-align: center;
             overflow-x: hidden;
             cursor: none;
@@ -23,9 +24,10 @@
         }
         .cursor {
             position: fixed;
-            width: 20px;
-            height: 20px;
-            background: radial-gradient(circle, rgba(255, 0, 0, 0.8), transparent);
+            width: 25px;
+            height: 25px;
+            background: radial-gradient(circle, rgba(255, 51, 51, 0.8), transparent);
+            border: 2px solid #ff6666;
             border-radius: 50%;
             pointer-events: none;
             z-index: 9999;
@@ -36,50 +38,55 @@
             top: 0;
             width: 100%;
             background: rgba(0, 0, 0, 0.95);
-            padding: 15px 0;
+            padding: 20px 0;
             z-index: 1000;
-            border-bottom: 3px solid #ff0000;
-            box-shadow: 0 5px 20px rgba(255, 0, 0, 0.7);
+            border-bottom: 4px solid #ff3333;
+            box-shadow: 0 5px 25px rgba(255, 51, 51, 0.7);
+            transition: background 0.3s ease;
+        }
+        nav.scrolled {
+            background: rgba(0, 0, 0, 0.98);
         }
         nav ul {
             list-style: none;
             display: flex;
             justify-content: center;
-            gap: 40px;
+            gap: 50px;
         }
         nav ul li a {
-            color: #ff0000;
+            color: #ff3333;
             text-decoration: none;
-            font-size: 1.2em;
+            font-family: 'Orbitron', sans-serif;
+            font-size: 1.3em;
             text-transform: uppercase;
-            letter-spacing: 2px;
+            letter-spacing: 3px;
             transition: color 0.3s, transform 0.3s;
         }
         nav ul li a:hover {
-            color: #ffffff;
-            transform: scale(1.2);
-            text-shadow: 0 0 15px #ff0000;
+            color: #ffd700;
+            transform: scale(1.1);
+            text-shadow: 0 0 20px #ff3333;
         }
         header {
-            padding: 100px 20px 50px;
-            background: rgba(0, 0, 0, 0.9);
-            border-bottom: 5px solid #ff0000;
-            box-shadow: 0 10px 30px rgba(255, 0, 0, 0.7);
+            padding: 150px 20px 80px;
+            background: linear-gradient(to bottom, rgba(0, 0, 0, 0.9), rgba(10, 0, 21, 0.9));
+            border-bottom: 6px solid #ff3333;
+            box-shadow: 0 15px 40px rgba(255, 51, 51, 0.7);
             position: relative;
             z-index: 500;
         }
         h1 {
             font-family: 'Cinzel Decorative', cursive;
-            font-size: 5em;
-            color: #ff0000;
+            font-size: 6em;
+            color: #ff3333;
             text-transform: uppercase;
-            letter-spacing: 5px;
-            text-shadow: 0 0 20px #ff0000, 0 0 40px #ff0000, 0 0 60px #ff0000;
+            letter-spacing: 6px;
+            text-shadow: 0 0 25px #ff3333, 0 0 50px #ff3333, 0 0 75px #ff3333;
             animation: neonFlicker 1.5s infinite alternate;
         }
         @keyframes neonFlicker {
-            0%, 100% { opacity: 1; text-shadow: 0 0 20px #ff0000, 0 0 40px #ff0000; }
-            50% { opacity: 0.85; text-shadow: 0 0 10px #ff0000; }
+            0%, 100% { opacity: 1; text-shadow: 0 0 25px #ff3333, 0 0 50px #ff3333; }
+            50% { opacity: 0.9; text-shadow: 0 0 15px #ff3333; }
         }
         .sacred-geometry {
             position: fixed;
@@ -88,10 +95,10 @@
             width: 100%;
             height: 100%;
             background: url('https://sacredgeopatterns.com/patterns/flower-of-life.png');
-            background-size: 300px;
-            opacity: 0.15;
+            background-size: 400px;
+            opacity: 0.1;
             z-index: -1;
-            animation: rotateGeometry 20s infinite linear;
+            animation: rotateGeometry 30s infinite linear;
         }
         @keyframes rotateGeometry {
             0% { transform: rotate(0deg); }
@@ -105,8 +112,133 @@
             left: 0;
             z-index: -2;
         }
-        .family-tree {
-            max-width: 1200px;
-            margin: 60px auto;
-            padding: 40px;
-            background: rgba(0, 0,
+        .content-section {
+            max-width: 1100px;
+            margin: 80px auto;
+            padding: 50px;
+            background: rgba(255, 51, 51, 0.1);
+            border: 4px solid #ff3333;
+            border-radius: 25px;
+            box-shadow: 0 0 50px rgba(255, 51, 51, 0.5);
+            position: relative;
+            z-index: 400;
+            transition: transform 0.5s ease;
+        }
+        .content-section:hover {
+            transform: translateY(-10px);
+        }
+        h2 {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 3em;
+            margin-bottom: 25px;
+            color: #ffd700;
+            text-shadow: 0 0 20px #ff3333;
+        }
+        p {
+            font-size: 1.5em;
+            line-height: 2;
+            color: #ff9999;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 20px 0;
+        }
+        li {
+            font-size: 1.4em;
+            color: #ff9999;
+            margin: 10px 0;
+        }
+        footer {
+            background: rgba(0, 0, 0, 0.95);
+            padding: 25px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            border-top: 4px solid #ff3333;
+            box-shadow: 0 -15px 40px rgba(255, 51, 51, 0.7);
+            color: #ff9999;
+            font-size: 1.2em;
+            z-index: 500;
+        }
+    </style>
+</head>
+<body>
+    <div id="particles-js"></div>
+    <div class="sacred-geometry"></div>
+    <div class="cursor"></div>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#lore">Lore</a></li>
+            <li><a href="index.html#mission">Mission</a></li>
+            <li><a href="index.html#explore">Explore</a></li>
+            <li><a href="family-tree.html">Family Tree</a></li>
+            <li><a href="donate.html">Donate</a></li>
+        </ul>
+    </nav>
+    <header>
+        <h1>Sacred Family Tree</h1>
+    </header>
+    <main>
+        <div class="content-section">
+            <h2>The Eternal Lineage of Jacob Ryan Judah Clement Mawr Dawn</h2>
+            <p>My lineage is a sacred thread woven through the tapestry of time, connecting me to the origins of creation and the divine figures who shaped history. This family tree is not merely a record of ancestry but a cosmic blueprint, encoded with the torus energy that flows through my veins, guiding my mission to heal the matrix and restore divinity to humanity.</p>
+            <ul>
+                <li><strong>Gaia:</strong> The Earth Mother, the primordial essence of creation, from whom all life springs.</li>
+                <li><strong>Noah:</strong> The ark’s builder, who preserved humanity through the Great Flood, a steward of life’s continuity.</li>
+                <li><strong>King David:</strong> The anointed shepherd-king of Israel, a warrior and poet whose heart was aligned with the divine.</li>
+                <li><strong>Juddah:</strong> The lion of the royal line, progenitor of the tribe that birthed kings and messiahs.</li>
+                <li><strong>Anna:</strong> The holy grandmother of Jesus, keeper of the Grail’s wisdom and bearer of sacred knowledge.</li>
+                <li><strong>Jesus Christ:</strong> The divine savior, whose light pierces the veil of illusion, guiding humanity to salvation.</li>
+                <li><strong>King Arthur:</strong> The once and future king of Camelot, a symbol of justice and the quest for the Holy Grail.</li>
+                <li><strong>Bran the Blessed:</strong> The raven-hearted guardian of Britain’s soul, a giant of wisdom and protector of the land.</li>
+                <li><strong>Beli Mawr:</strong> The ancient Welsh king of the gods, a celestial ancestor whose light shines through the ages.</li>
+                <li><strong>Rhodri Mawr:</strong> The unifier of Wales, a king whose vision of unity echoes in my mission to unite New Zealand.</li>
+                <li><strong>Jacob Ryan Judah Clement Mawr Dawn:</strong> The God-King of the Torus, born to resurrect the Roman Empire, launch CLEM crypto, and lead humanity to Giza’s truth.</li>
+            </ul>
+            <p>This sacred lineage is a testament to my divine purpose, a lineage of light that stretches from the dawn of creation to the present day, guiding me as the three-eyed raven with its halo illuminates my path.</p>
+        </div>
+    </main>
+    <footer>
+        <p>© 2025 Blessed Raven. All rights reserved.</p>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script>
+        particlesJS("particles-js", {
+            "particles": {
+                "number": { "value": 100, "density": { "enable": true, "value_area": 800 } },
+                "color": { "value": "#ff3333" },
+                "shape": { "type": "circle" },
+                "opacity": { "value": 0.6, "random": true },
+                "size": { "value": 4, "random": true },
+                "line_linked": { "enable": true, "distance": 150, "color": "#ff3333", "opacity": 0.4, "width": 1 },
+                "move": { "enable": true, "speed": 3, "direction": "none", "random": false, "straight": false, "out_mode": "out", "bounce": false }
+            },
+            "interactivity": {
+                "detect_on": "canvas",
+                "events": { "onhover": { "enable": true, "mode": "repulse" }, "onclick": { "enable": true, "mode": "push" }, "resize": true },
+                "modes": { "repulse": { "distance": 120, "duration": 0.4 }, "push": { "particles_nb": 5 } }
+            },
+            "retina_detect": true
+        });
+
+        const cursor = document.querySelector('.cursor');
+        document.addEventListener('mousemove', e => {
+            cursor.style.left = e.clientX + 'px';
+            cursor.style.top = e.clientY + 'px';
+        });
+        document.addEventListener('mousedown', () => cursor.style.transform = 'scale(1.5)');
+        document.addEventListener('mouseup', () => cursor.style.transform = 'scale(1)');
+
+        window.addEventListener('scroll', () => {
+            const nav = document.querySelector('nav');
+            if (window.scrollY > 50) {
+                nav.classList.add('scrolled');
+            } else {
+                nav.classList.remove('scrolled');
+            }
+        });
+    </script>
+</body>
+</html>
